# LeanBlueprintExtractor

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
configs/: FLT.yaml
scripts/: extract_benchmark.py
src/lean_blueprint_extractor/: blueprint_extractor.py  blueprint_lean_linking.py  lean_extractor.py  lean_project_extractor.py  local_project_extractor.py  mcp_server.py  utils.py
tests/: test_postprocess.py  test_utils.py
