[project]
name = "lean-blueprint-extractor"
version = "0.1.0"
authors = []
description = "Lean Blueprint Extractor is a tool for extracting and managing Lean Blueprint projects."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "jsonlines>=4.0.0",
    "rich",
    "leanblueprint>=0.0.15",
    "networkx>=3.4.2",
    "joblib>=1.5.1",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
    "lean-interact",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.6.0"
]

[project.scripts]
lean-blueprint-extract-local = "lean_blueprint_extractor.local_project_extractor:main"
lean-blueprint-mcp           = "lean_blueprint_extractor.mcp_server:main"

[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
lean-interact = { git = "https://github.com/augustepoiroux/LeanInteract", tag = "nightly-2025-07-09" }
